<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ankitts.exltotts.ui.PreviewActivity">

    <TextView
        android:id="@+id/tvPreviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPreviewContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnStartConversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPreviewTitle" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/empty_group_message"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnStartConversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPreviewTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartConversion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_conversion_button"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
